monitoring-platform/backend-api/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: testing
spec:
  ingressClassName: nginx
  rules:
  - host: testingress.cdot.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test
            port:
              number: 80
